<resources>
    <string name="app_name">lab1</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="a">学号：</string>
    <string name="a_hint">请输入学号</string>
    <string name="b">密码：</string>
    <string name="b_hint">请输入密码</string>
    <string name="student">学生</string>
    <string name="teach">教职工</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
</resources>
